--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,28 +48,25 @@
                            <div class="menu-main-menu-container">
                               <ul id="top-menu" class="navbar-nav ml-auto">
                                  <li class="menu-item">
-                                    <a href="index.html">Home</a>
+                                    <a href="index.html">Trang chủ</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="movie-category.html">Movies</a>
+                                    <a href="movie-category.html">Hành động</a>
                                  </li> 
                                  <li class="menu-item">
-                                    <a href="show-category.html">Tv Shows</a>
+                                    <a href="show-category.html">Kinh dị</a>
                                  </li>                                                              
-                                 <!-- <li class="menu-item">
-                                    <a href="movie-category.html">Blog</a>
-                                 </li> -->
+
                                  <li class="menu-item">
-                                    <a href="#">Pages</a>
+                                    <a href="#">Xem thêm</a>
                                     <ul class="sub-menu">
-                                       <li class="menu-item"><a href="about-us.html">About Us</a></li>
-                                       <li class="menu-item "><a href="contact.html">Contact</a></li>
-                                       <li class="menu-item"><a href="faq.html">FAQ</a></li>
-                                       <li class="menu-item"><a href="privacy-policy.html">Privacy-Policy</a></li>
-                                       <li class="menu-item"><a href="#">Pricing</a>
+                                       <li class="menu-item"><a href="#">Thể loại 1</a></li>
+                                       <li class="menu-item "><a href="#">Thể loại 2</a></li>
+                                       <li class="menu-item"><a href="#">Thể loại 3</a></li>
+                                       <li class="menu-item"><a href="#">Thể loại 4</a></li>
+                                       <li class="menu-item"><a href="#">Thể loại 5</a>
                                        <ul class="sub-menu">
-                                          <li class="menu-item"><a href="pricing-plan-1.html">Pricing Plan 1</a></li>
-                                          <li class="menu-item"><a href="pricing-plan-2.html">Pricing Plan 2</a></li>
+                                          <li class="menu-item"><a href="#">Thể loại 6</a></li>
                                        </ul>
                                     </li>
                                     </ul>
@@ -390,9 +387,9 @@
                             </div>
                         </div>
                            <div class="d-flex align-items-center r-mb-23" data-animation-in="fadeInUp" data-delay-in="1.2">
-                              <a href="show-details.html" class="btn btn-hover iq-button"><i class="fa fa-play mr-2"
+                              <a href="movie-intro.html" class="btn btn-hover iq-button"><i class="fa fa-play mr-2"
                                  aria-hidden="true"></i>Play Now</a>
-                              <a href="show-details.html" class="btn btn-link">More details</a>
+                              <a href="movie-intro.html" class="btn btn-link">More details</a>
                            </div>
                         </div>
                      </div>
@@ -638,7 +635,7 @@
                                        <img src="images/favorite/02.jpg" class="img-fluid" alt="">
                                     </div>
                                     <div class="block-description">
-                                       <h6 class="iq-title"><a href="show-details.html">Last Race</a></h6>
+                                       <h6 class="iq-title"><a href="movie-intro.html">Last Race</a></h6>
                                        <div class="movie-time d-flex align-items-center my-2">
                                           <div class="badge badge-secondary p-1 mr-2">7+</div>
                                           <span class="text-white">2 Seasons</span>
@@ -715,7 +712,7 @@
                                        <img src="images/favorite/04.png" class="img-fluid" alt="">
                                     </div>
                                     <div class="block-description">
-                                       <h6 class="iq-title"><a href="show-details.html">Dino Land</a></h6>
+                                       <h6 class="iq-title"><a href="movie-intro.html">Dino Land</a></h6>
                                        <div class="movie-time d-flex align-items-center my-2">
                                           <div class="badge badge-secondary p-1 mr-2">18+</div>
                                           <span class="text-white">3 Seasons</span>
@@ -754,7 +751,7 @@
                                        <img src="images/favorite/05.jpg" class="img-fluid" alt="">
                                     </div>
                                     <div class="block-description">
-                                       <h6 class="iq-title"><a href="show-details.html">Jaction action</a></h6>
+                                       <h6 class="iq-title"><a href="movie-intro.html">Jaction action</a></h6>
                                        <div class="movie-time d-flex align-items-center my-2">
                                           <div class="badge badge-secondary p-1 mr-2">10+</div>
                                           <span class="text-white">1 Season</span>
@@ -1056,7 +1053,7 @@
                                        <img src="images/suggested/02.jpg" class="img-fluid" alt="">
                                     </div>
                                     <div class="block-description">
-                                       <h6 class="iq-title"><a href="show-details.html">Jumbo Queen</a></h6>
+                                       <h6 class="iq-title"><a href="movie-intro.html">Jumbo Queen</a></h6>
                                        <div class="movie-time d-flex align-items-center my-2">
                                           <div class="badge badge-secondary p-1 mr-2">9+</div>
                                           <span class="text-white">2 Seasons</span>
@@ -1129,7 +1126,7 @@
                                        <img src="images/suggested/04.jpg" class="img-fluid" alt="">
                                     </div>
                                     <div class="block-description">
-                                       <h6 class="iq-title"><a href="show-details.html">Friends</a></h6>
+                                       <h6 class="iq-title"><a href="movie-intro.html">Friends</a></h6>
                                        <div class="movie-time d-flex align-items-center my-2">
                                           <div class="badge badge-secondary p-1 mr-2">14+</div>
                                           <span class="text-white">10 Seasons</span>
