--- a/src/html/movie-intro.html
+++ b/src/html/movie-intro.html
@@ -9,6 +9,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Streamit - Responsive Bootstrap 4 Template</title>
+   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
    <!-- Favicon -->
    <link rel="shortcut icon" href="images/favicon.ico" />
    <!-- Bootstrap CSS -->
@@ -19,6 +20,7 @@
    <link rel="stylesheet" href="css/style.css" />
    <!-- Responsive -->
    <link rel="stylesheet" href="css/responsive.css" />
+   
 </head>
 
 <body>
@@ -374,28 +376,26 @@
                   </ul>
                </div>
             </div>
+            <div class="col-lg-2">
+               <div class="mv-intro-user">
+                  <span><img src="images/user-solid-24.png" alt=""></span>
+               </div>
+               
+            </div>
+            <div class="col-lg-10">
+               <ul class="mv-intro-list">
+                  <li>Tình Trạng</li>
+                  <li>Đạo Diễn:</li>
+                  <li>Quốc Gia:</li>
+                  <li>Năm Sản Xuất:</li>
+                  <li>Thời Lượng:</li>
+                  <li>Thể loại:</li>
+                  <li>Ngày Phát Hành:</li>
+                  <li>Lượt Xem</li>
+               </ul>
+            </div>
          </div>
       </section>
-      <!-- <div class="dropdown genres-box">
-         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Genres
-         </button>
-         <div class="dropdown-menu three-column" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Hindi</a>
-            <a class="dropdown-item" href="#">Tamil</a>
-            <a class="dropdown-item" href="#">Punjabi</a>
-            <a class="dropdown-item" href="#">English</a>
-            <a class="dropdown-item" href="#">Comedies</a>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Romance</a>
-            <a class="dropdown-item" href="#">Dramas</a>
-            <a class="dropdown-item" href="#">Bollywood</a>
-            <a class="dropdown-item" href="#">Hollywood</a>
-            <a class="dropdown-item" href="#">Children & Family</a>
-            <a class="dropdown-item" href="#">Award-Winning</a>
-         </div>
-      </div> -->
    </section>
    <!-- Slider End -->
    <!-- MainContent -->
@@ -415,7 +415,7 @@
                                     <img src="images/upcoming/01.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">The Last Breath</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">The Last Breath</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">5+</div>
                                        <span class="text-white">2h 30m</span>
@@ -454,16 +454,16 @@
                                     <img src="images/upcoming/02.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Last Night</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Last Night</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">22+</div>
                                        <span class="text-white">2h 15m</span>
                                     </div>
                                     <div class="hover-buttons">
-                                       <span class="btn btn-hover">
+                                       <a class="btn btn-hover">
                                           <i class="fa fa-play mr-1" aria-hidden="true"></i>
                                           Play Now
-                                       </span>
+                                       </a>
                                     </div>
                                  </div>
                                  <div class="block-social-info">
@@ -494,16 +494,16 @@
                                     <img src="images/upcoming/03.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">1980</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">1980</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">25+</div>
                                        <span class="text-white">3h</span>
                                     </div>
                                     <div class="hover-buttons">
-                                       <span class="btn btn-hover">
+                                       <a class="btn btn-hover">
                                           <i class="fa fa-play mr-1" aria-hidden="true"></i>
                                           Play Now
-                                       </span>
+                                       </a>
                                     </div>
                                  </div>
                                  <div class="block-social-info">
@@ -534,16 +534,16 @@
                                     <img src="images/upcoming/04.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Looters</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Looters</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">11+</div>
                                        <span class="text-white">2h 45m</span>
                                     </div>
                                     <div class="hover-buttons">
-                                       <span class="btn btn-hover">
+                                       <a class="btn btn-hover">
                                           <i class="fa fa-play mr-1" aria-hidden="true"></i>
                                           Play Now
-                                       </span>
+                                       </a>
                                     </div>
                                  </div>
                                  <div class="block-social-info">
@@ -574,16 +574,16 @@
                                     <img src="images/upcoming/05.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Vugotronic</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Vugotronic</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">9+</div>
                                        <span class="text-white">2h 30m</span>
                                     </div>
                                     <div class="hover-buttons">
-                                       <span class="btn btn-hover">
+                                       <a class="btn btn-hover">
                                           <i class="fa fa-play mr-1" aria-hidden="true"></i>
                                           Play Now
-                                       </span>
+                                       </a>
                                     </div>
                                  </div>
                                  <div class="block-social-info">
@@ -629,7 +629,7 @@
                                     <img src="images/movies/01.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">The Illusion</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">The Illusion</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">10+</div>
                                        <span class="text-white">3h 15m</span>
@@ -668,7 +668,7 @@
                                     <img src="images/movies/02.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Burning</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Burning</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">13+</div>
                                        <span class="text-white">2h 20m</span>
@@ -707,7 +707,7 @@
                                     <img src="images/movies/03.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Hubby Kubby</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Hubby Kubby</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">9+</div>
                                        <span class="text-white">2h 40m</span>
@@ -746,7 +746,7 @@
                                     <img src="images/movies/04.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Open Dead Shot</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Open Dead Shot</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">16+</div>
                                        <span class="text-white">1h 40m</span>
@@ -785,7 +785,7 @@
                                     <img src="images/movies/05.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Jumboo Queen</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Jumboo Queen</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">15+</div>
                                        <span class="text-white">3h</span>
@@ -839,7 +839,7 @@
                                     <img src="images/movies/06.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">The Lost Journey</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">The Lost Journey</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">20+</div>
                                        <span class="text-white">2h 15m</span>
@@ -878,7 +878,7 @@
                                     <img src="images/movies/07.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Boop Bitty</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Boop Bitty</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">11+</div>
                                        <span class="text-white">2h 30m</span>
@@ -917,7 +917,7 @@
                                     <img src="images/movies/08.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Unknown Land</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Unknown Land</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">17+</div>
                                        <span class="text-white">2h 30m</span>
@@ -956,7 +956,7 @@
                                     <img src="images/movies/09.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Blood Block</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Blood Block</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">13+</div>
                                        <span class="text-white">2h 30m</span>
@@ -995,7 +995,7 @@
                                     <img src="images/movies/10.jpg" class="img-fluid" alt="">
                                  </div>
                                  <div class="block-description">
-                                    <h6 class="iq-title"><a href="show-details.html">Champions</a></h6>
+                                    <h6 class="iq-title"><a href="movie-intro.html">Champions</a></h6>
                                     <div class="movie-time d-flex align-items-center my-2">
                                        <div class="badge badge-secondary p-1 mr-2">13+</div>
                                        <span class="text-white">2h 30m</span>
