--- a/src/html/movie-intro.html
+++ b/src/html/movie-intro.html
@@ -50,28 +50,25 @@
                         <div class="menu-main-menu-container">
                            <ul id="top-menu" class="navbar-nav ml-auto">
                               <li class="menu-item">
-                                 <a href="index.html">Home</a>
+                                 <a href="index.html">Trang chủ</a>
                               </li>
                               <li class="menu-item">
-                                 <a href="movie-category.html">Movies</a>
+                                 <a href="movie-category.html">Hành động</a>
                               </li> 
                               <li class="menu-item">
-                                 <a href="show-category.html">Tv Shows</a>
+                                 <a href="show-category.html">Kinh dị</a>
                               </li>                                                              
-                              <!-- <li class="menu-item">
-                                 <a href="movie-category.html">Blog</a>
-                              </li> -->
+
                               <li class="menu-item">
-                                 <a href="#">Pages</a>
+                                 <a href="#">Xem thêm</a>
                                  <ul class="sub-menu">
-                                    <li class="menu-item"><a href="about-us.html">About Us</a></li>
-                                    <li class="menu-item "><a href="contact.html">Contact</a></li>
-                                    <li class="menu-item"><a href="faq.html">FAQ</a></li>
-                                    <li class="menu-item"><a href="privacy-policy.html">Privacy-Policy</a></li>
-                                    <li class="menu-item"><a href="#">Pricing</a>
+                                    <li class="menu-item"><a href="#">Thể loại 1</a></li>
+                                    <li class="menu-item "><a href="#">Thể loại 2</a></li>
+                                    <li class="menu-item"><a href="#">Thể loại 3</a></li>
+                                    <li class="menu-item"><a href="#">Thể loại 4</a></li>
+                                    <li class="menu-item"><a href="#">Thể loại 5</a>
                                     <ul class="sub-menu">
-                                       <li class="menu-item"><a href="pricing-plan-1.html">Pricing Plan 1</a></li>
-                                       <li class="menu-item"><a href="pricing-plan-2.html">Pricing Plan 2</a></li>
+                                       <li class="menu-item"><a href="#">Thể loại 6</a></li>
                                     </ul>
                                  </li>
                                  </ul>
@@ -384,14 +381,14 @@
             </div>
             <div class="col-lg-10">
                <ul class="mv-intro-list">
-                  <li>Tình Trạng</li>
+                  <li>Tình Trạng:</li>
                   <li>Đạo Diễn:</li>
                   <li>Quốc Gia:</li>
                   <li>Năm Sản Xuất:</li>
                   <li>Thời Lượng:</li>
                   <li>Thể loại:</li>
                   <li>Ngày Phát Hành:</li>
-                  <li>Lượt Xem</li>
+                  <li>Lượt Xem:</li>
                </ul>
             </div>
          </div>
