--- a/src/html/login.html
+++ b/src/html/login.html
@@ -45,18 +45,18 @@
                         </div>
                         
                            <div class="sign-info">
-                              <button type="submit" class="btn btn-hover">Sign in</button>
-                              <div class="custom-control custom-checkbox d-inline-block">
+                              <div class="custom-control custom-checkbox d-inline-block pb-2">
                                  <input type="checkbox" class="custom-control-input" id="customCheck">
                                  <label class="custom-control-label" for="customCheck">Remember Me</label>
-                              </div>                                
+                              </div> <br>
+                              <a href="index.html" class="btn btn-hover" style="display: block; margin: 0 auto">Sign in</a>
                            </div>                                    
                         
                      </form>
                   </div>
                </div>
                <div class="mt-3">
-                  <div class="d-flex justify-content-center links">
+                  <div class="d-flex justify-content-center links pb-1">
                      Don't have an account? <a href="sign-up.html" class="text-primary ml-2">Sign Up</a>
                   </div>
                   <div class="d-flex justify-content-center links">
