--- a/src/html/movie-category.html
+++ b/src/html/movie-category.html
@@ -330,12 +330,12 @@
       <section id="iq-favorites">
          <div class="container-fluid">
             <div class="row">
-               <div class="col-sm-12 overflow-hidden">
+               <div class="col-sm-12 overflow-hidden mt-5">
                   <div class="iq-main-header d-flex align-items-center justify-content-between">
                      <h4 class="main-title">Bollywood Blockbusters</h4>
                   </div>
                   <div class="favorites-contens">
-                     <ul class="favorites-slider list-inline  row p-0 mb-0">
+                     <ul class="favorites-slider list-inline row p-0 mb-0">
                         <li class="slide-item">
                               <div class="block-images position-relative">
                                  <div class="img-box">
