--- a/src/html/movie-category.html
+++ b/src/html/movie-category.html
@@ -59,16 +59,23 @@
 
                               <li class="menu-item">
                                  <a href="#">Xem thêm</a>
-                                 <ul class="sub-menu">
-                                    <li class="menu-item"><a href="#">Thể loại 1</a></li>
-                                    <li class="menu-item "><a href="#">Thể loại 2</a></li>
-                                    <li class="menu-item"><a href="#">Thể loại 3</a></li>
-                                    <li class="menu-item"><a href="#">Thể loại 4</a></li>
-                                    <li class="menu-item"><a href="#">Thể loại 5</a>
-                                    <ul class="sub-menu">
-                                       <li class="menu-item"><a href="#">Thể loại 6</a></li>
-                                    </ul>
-                                 </li>
+                                 <ul class="sub-menu menu-item-expand">
+                                    <div class="menu-expand-inner">
+                                       <ul>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 1</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 2</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 3</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 4</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 5</a></li>
+                                       </ul>
+                                       <ul>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 6</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 7</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 8</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 9</a></li>
+                                          <li class="menu-item"><a href="movie-category.html">Thể loại 10</a></li>
+                                       </ul>
+                                    </div>
                                  </ul>
                               </li>
                            </ul>
