--- a/src/html/movie-intro.html
+++ b/src/html/movie-intro.html
@@ -333,22 +333,11 @@
       </div>
    </header>
    <!-- Header End -->
-   <section class="iq-main-slider p-0">
-      <div id="tvshows-slide mb-5">
-         <div class="col-lg-10" style="margin: 0 auto">
-            <a href="movie-details.html">
-               <div class="shows-img mb-5">
-                  <img src="images/movie-banner/3.jpg" class="w-100" alt="">
-                  <div class="shows-content">
-                     <h4 class="text-white mb-1">The Lost Journey</h4>
-                     <div class="movie-time d-flex align-items-center">
-                        <div class="badge badge-secondary p-1 mr-2">20+</div>
-                        <span class="text-white">2h 15m</span>
-                     </div>
-                  </div>
-               </div>
-            </a>
-         </div>         
+   <section class="iq-main-slider" style="padding-top: 75px;">
+      <div class="video-container iq-main-slider mb-5">
+         <video class="video d-block" controls loop>
+            <source src="video/sample-video.mp4" type="video/mp4">
+         </video>
       </div>
       <section class="movie-detail container-fluid">
          <div class="row">
